# xpl-datasub

./: .gitignore  CMakeLists.txt  README.md  drefs.c  dssock.h  dssock_win.c  plugin.c  service.c  service.h
scripts/: init.cmake
src/: drefs.c  drefs.h  dsarray.c  dsarray.h  dssock.h  dssock_win.c  dsstring.c  dsstring.h  hash.c  hash.h  plugin.c  service.c  service.h
